Fixed links, hopefully

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<ul>
-			<li><a heref="https://msucsis.github.io/csc425/">CSC 425</a></li>
-    			<li><a heref="https://msucsis.github.io/csc430/">CSC 430</a></li>
+			<li><a href="https://msucsis.github.io/csc425/">CSC 425</a></li>
+    			<li><a href="https://msucsis.github.io/csc430/">CSC 430</a></li>
    		 </ul>
         		<h1>Hi there, I'm Ally Davis!</h1>
 				<p>My goals are to lean new things, expand my knowledge of software and moible programming,and to be able to take what I have learned and be able to apply it in the real world. </p>
