--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html>
 	<head>
 		<title>Ally Davis</title>
-    <p><b><i>Ally Davis </i></b></p>
+   		 <center><p><b><i>Ally Davis </i></b></p>
 	</head>
 	<body>
-		<ul>
-			<li><a href="https://msucsis.github.io/csc425/">CSC 425</a></li>
-    			<li><a href="https://msucsis.github.io/csc430/">CSC 430</a></li>
-   		 </ul>
+		
         		<h1>Hi there, I'm Ally Davis!</h1>
 				<p>My goals are to lean new things, expand my knowledge of software and moible programming,and to be able to take what I have learned and be able to apply it in the real world. </p>
-    		
+    		</center>
 		<footer>
-    		<ul>
-        		<li><a href="mailto:adavis59@murraystate.edu">email</a></li>
-        		<li><a href="https://github.com/Ally59">github.com/Ally59</a></li>
-			</ul>
+    			<ul>
+        			<li><a href="https://msucsis.github.io/csc425/">CSC 425</a></li>
+    				<li><a href="https://msucsis.github.io/csc430/">CSC 430</a></li>
+			
+				<li><a href="mailto:adavis59@murraystate.edu">email</a></li>
+        			<li><a href="https://github.com/Ally59">github.com/Ally59</a></li>
+   		 	</ul>
 		</footer>
 	</body>
 </html>
