Connecting style and index?

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>Ally Davis</title>
    		 <center><p><b><i>Ally Davis </i></b></p>
+			 <!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/style.css">
 	</head>
 	<body>
 		
