Taking style out

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 	<head>
 		<title>Ally Davis</title>
-   		 <center><p><b><i>Ally Davis </i></b></p>
-			 <!-- link to main stylesheet -->
+   		 <p><b><i>Ally Davis </i></b></p>
+			 
 		<link rel="stylesheet" type="text/css" href="/style.css">
 	</head>
 	<body>
 		
         		<h1>Hi there, I'm Ally Davis!</h1>
 				<p>My goals are to lean new things, expand my knowledge of software and moible programming,and to be able to take what I have learned and be able to apply it in the real world. </p>
-    		</center>
+    		
 		<footer>
     			<ul>
         			<li><a href="https://msucsis.github.io/csc425/">CSC 425</a></li>
