Fixing some small things

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Ally Davis</title>
-   		 <p><b><i>Ally Davis </i></b></p>
+   		 <p><strong><em>Ally59 </em></strong></p>
 			 
 		<link rel="stylesheet" type="text/css" href="/style.css">
 	</head>
@@ -15,8 +15,6 @@
     			<ul>
         			<li><a href="https://msucsis.github.io/csc425/">CSC 425</a></li>
     				<li><a href="https://msucsis.github.io/csc430/">CSC 430</a></li>
-			
-				<li><a href="mailto:adavis59@murraystate.edu">email</a></li>
         			<li><a href="https://github.com/Ally59">github.com/Ally59</a></li>
    		 	</ul>
 		</footer>
