--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
 		<title>Ally Davis</title>
-   		 <p><strong><em>Ally59 </em></strong></p>
 			 
 		<link rel="stylesheet" type="text/css" href="/style.css">
 	</head>
 	<body>
 		
-        		<h1>Hi there, I'm Ally Davis!</h1>
-				<p>My goals are to lean new things, expand my knowledge of software and moible programming,and to be able to take what I have learned and be able to apply it in the real world. </p>
+        		<h1>Hi there, I'm Ally Davis! <strong><em>(Ally59)</strong></em></h1>
+				<ul>My goals are: 
+                <li>To learn new things </li>
+                <li>Expand my knowledge of software and moible programming</li>
+                <li>Be able to take what I have learned and be able to apply it in the real world </li>
+                </ul>
     		
 		<footer>
     			<ul>
+                Here are some usefull links!
         			<li><a href="https://msucsis.github.io/csc425/">CSC 425</a></li>
     				<li><a href="https://msucsis.github.io/csc430/">CSC 430</a></li>
         			<li><a href="https://github.com/Ally59">github.com/Ally59</a></li>
