--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		
         		<h1>Hi there, I'm Ally Davis! <strong><em>(Ally59)</strong></em></h1>
 				<ul>My goals are: 
-                <li>To learn new things </li>
+                <li>To learn new things about HTML</li>
                 <li>Expand my knowledge of software and moible programming</li>
-                <li>Be able to take what I have learned and be able to apply it in the real world </li>
+                <li>Use what I have learned to try to get an internship </li>
                 </ul>
     		
 		<footer>
