--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Ally Davis</title>
-			 
+		<p><small> Bachelors in Computer Sience 2020</small></p>	 
 		<link rel="stylesheet" type="text/css" href="/style.css">
 	</head>
 	<body>
@@ -17,7 +17,7 @@
     		
 		<footer>
     			<ul>
-                Here are some usefull links!
+                Here are some useful links!
         			<li><a href="https://msucsis.github.io/csc425/">CSC 425</a></li>
     				<li><a href="https://msucsis.github.io/csc430/">CSC 430</a></li>
         			<li><a href="https://github.com/Ally59">github.com/Ally59</a></li>
