--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html>
 	<head>
 		<title>Ally Davis</title>
-		<p><small> Bachelors in Computer Sience 2020</small></p>	 
+	 
 		<link rel="stylesheet" type="text/css" href="/style.css">
 	</head>
 	<body>
 		
-        		<h1>Hi there, I'm Ally Davis! <strong><em>(Ally59)</strong></em></h1>
+        		<h1>Hi there, I'm Ally Davis! </h1>
+			<p><small> Bachelors in Computer Sience 2020</small></p>
 				<ul>My goals are: 
                 <li>To learn new things about HTML</li>
                 <li>Expand my knowledge of software and moible programming</li>
