--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
                 </ul>
     		
 		<footer>
-    			<ul>
-                Here are some useful links!
-        			<li><a href="https://msucsis.github.io/csc425/">CSC 425</a></li>
-    				<li><a href="https://msucsis.github.io/csc430/">CSC 430</a></li>
-        			<li><a href="https://github.com/Ally59">github.com/Ally59</a></li>
-   		 	</ul>
+			<p> You can contact me at: atdavis0126@gmail.com </p>
 		</footer>
 	</body>
 </html>
