--- a/index.html
+++ b/index.html
@@ -8,13 +8,29 @@
 	</head>
 	<body>
 		
-        		<h1>Hi there, I'm Ally Davis! </h1>
-			<p><small> Bachelors in Computer Sience 2020</small></p>
-				<ul>My goals are: 
-                <li>To learn new things about HTML</li>
-                <li>Expand my knowledge of software and moible programming</li>
-                <li>Use what I have learned to try to get an internship </li>
+        	<h1>Hello, I'm Ally Davis! </h1>
+		<p><small> Bachelors in Computer Sience Murraay State University 2020</small></p>
+		<p><b>Experience:</b></p>
+		<ul>Murray State University (Fall 2017- Fall 2020)
+               	 	<li>2017-2018 Residential College Representative</li>
+			<li>2017-2019 Active ACM Member</li>
+               	 	<li>2018-2019 Residential College President</li>
+			<li>2018-2019 Great Beginings Leader</li>
+			<li>Spring 2019 - Fall 2020 Teaching Assistant</li>
+			<li>2019-2020 ACM Secretary</li>
                 </ul>
+		<ul> CSI Internship (Summer 2019)
+			<li>Learning Database Administration</li>
+			<li>Learning Interal Developemnt</li>
+			<li>Working Under Time Constraints</li>
+		</ul>
+		<ul> MRCOOL Jr. Developer & Content Coordinator (2021- Current)
+			<li>Coordinating Files</li>
+			<li>Database Administration</li>
+			<li>Web Design / Web Development</li>
+			<li>Admin-ing ticketing systems</li>
+			<li>Internal Developement</li>
+		</ul>
     		
 		<footer>
 			<p> You can contact me at: atdavis0126@gmail.com </p>
