Revert "Updating to use Tailwind"
This reverts commit e8ce3c4e7bdb24fafd9fdf6bd437e1709ffe7ca7.

--- a/index.html
+++ b/index.html
@@ -2,27 +2,26 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="./output.css" rel="stylesheet">
 		<title>Ally Davis</title>
+	 
+		<link rel="stylesheet" type="text/css" href="/style.css">
 	</head>
 	<body>
 		
-        	<h1 class="text-3xl font-bold underline">Hello, I'm Ally Davis! </h1>
-		<p><small> Bachelors in Computer Science Murray State University 2020</small></p>
+        	<h1>Hello, I'm Ally Davis! </h1>
+		<p><small> Bachelors in Computer Sience Murraay State University 2020</small></p>
 		<p><b>Experience:</b></p>
 		<ul>Murray State University (Fall 2017- Fall 2020)
                	 	<li>2017-2018 Residential College Representative</li>
 			<li>2017-2019 Active ACM Member</li>
                	 	<li>2018-2019 Residential College President</li>
-			<li>2018-2019 Great Beginnings Leader</li>
+			<li>2018-2019 Great Beginings Leader</li>
 			<li>Spring 2019 - Fall 2020 Teaching Assistant</li>
 			<li>2019-2020 ACM Secretary</li>
                 </ul>
 		<ul> CSI Internship (Summer 2019)
 			<li>Learning Database Administration</li>
-			<li>Learning Internal Development</li>
+			<li>Learning Interal Developemnt</li>
 			<li>Working Under Time Constraints</li>
 		</ul>
 		<ul> MRCOOL Jr. Developer & Content Coordinator (2021- Current)
@@ -30,7 +29,7 @@
 			<li>Database Administration</li>
 			<li>Web Design / Web Development</li>
 			<li>Admin-ing ticketing systems</li>
-			<li>Internal Development</li>
+			<li>Internal Developement</li>
 		</ul>
     		
 		<footer>
